# clean-architecture

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  para_testar.py  pyproject.toml
src/data/find_pet/: find.py  find_test.py
src/data/find_user/: find.py  find_test.py
src/data/interfaces/: pet_repository_interface.py  user_repository_interface.py
src/data/register_pet/: register.py  register_test.py
src/data/register_user/: register.py  register_test.py
src/data/test/: find_pet_spy.py  register_pet_spy.py  register_user_spy.py
src/domain/test/: mock_pet.py  mock_user.py
src/domain/use_cases/: find_pet.py  find_user.py  register_pet.py  register_user.py
src/infra/config/: db_config.py
src/infra/entities/: pets.py  users.py
src/infra/repo/: fake.py  pet_repository.py  pet_repository_test.py  user_repository.py  user_repository_test.py
src/infra/test/: pet_repository_spy.py  user_repository_spy.py
src/main/adapter/: api_adapter.py
src/main/composer/: find_pet_composite.py  find_user_composite.py  register_user_composite.py
src/main/routes/: api_route.py
src/presenters/controllers/: find_pet_controller.py  find_pet_controller_test.py  find_user_controller.py  find_user_controller_test.py  register_pet_controller.py  register_pet_controller_test.py  register_user_controller.py  register_user_controller_test.py
src/presenters/errors/: http_errors.py
src/presenters/helpers/: http_models.py
