[tool.poetry]
name = "backend-python"
version = "0.1.0"
description = ""
authors = ["Francisco Cezar <franciscocezar.jr@outlook.com>"]
readme = "README.md"
packages = [{include = "backend_python"}]

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^2.17.1"
black = "^23.1.0"
flake8 = "^6.0.0"
pre-commit = "^3.2.0"
sqlalchemy = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
